@@ -6,4 +6,4 @@ use lib 'inc/';
 use Module::Package 'Au:dry 1';
 requires 'parent';
 requires 'Plack::Middleware';
-requires 'Process::SizeLimit::Core' => '0.9501';
+requires 'Process::SizeLimit::Core' => '0.9508';
