@@ -1,3 +1,5 @@
+* Add callback to take the process size information (rrwo).
+
 [Changes for 0.10 - Sat Nov 24 17:02:43 CST 2018]
 
 * Fix installation compatibility with Perl 5.26+. (dboehmer)
